# glue

./: .gitignore  CHANGELOG.md  DOMAIN_REPORT.md  Makefile  README.md  cabal.project  haskell-dart-comparison.md  pubspec.yaml  reacthome-auth.cabal  reacthome-relay.hp  workspace.yaml
app/: App.hs  Main.hs  (+2 more)
assist/: reacthome-assist.cabal
assist/app/: Main.hs
assist/src/Reacthome/Assist/: App.hs  Environment.hs
assist/src/Reacthome/Assist/Controller/: Dialog.hs  Yandex.hs
assist/src/Reacthome/Assist/Dialog/: Gate.hs
assist/src/Reacthome/Assist/Domain/: Answer.hs  Query.hs  User.hs  Users.hs
assist/src/Reacthome/Assist/Repository/: Answers.hs  PublicKeys.hs  Users.hs
assist/src/Reacthome/Assist/Service/: Dialog.hs
assist/src/Reacthome/Gate/: Connection.hs
assist/src/Reacthome/Gate/Connection/: Pool.hs
assist/src/Reacthome/Yandex/Dialogs/: DialogRequest.hs  DialogResponse.hs  Directives.hs  Entity.hs  Markup.hs  Session.hs  User.hs
auth/: reacthome-auth.cabal
auth/app/: Main.hs
auth/curl/: auth.http  not-allowed.http  static.http
auth/curl/authenticate/: begin.http
auth/curl/register/: complete.http
auth/public/: auth.js  styles.css
auth/src/Reacthome/Auth/: App.hs  Environment.hs
auth/src/Reacthome/Auth/Controller/: AuthFlowCookie.hs  Authentication.hs  OAuth.hs  Registration.hs  Users.hs
auth/src/Reacthome/Auth/Domain/: Challenge.hs  Challenges.hs  Client.hs  Clients.hs  Hash.hs  PublicKey.hs  PublicKeys.hs  RefreshToken.hs  RefreshTokens.hs  User.hs  Users.hs
auth/src/Reacthome/Auth/Repository/: AuthFlows.hs  AuthUsers.hs  Challenges.hs  Clients.hs  RefreshTokens.hs  Sqlite.hs
auth/src/Reacthome/Auth/Service/: AuthFlow.hs  AuthFlows.hs  AuthUsers.hs  Challenge.hs  Challenges.hs  RefreshTokens.hs  Secret.hs
auth/test/Reacthome/Auth/Domain/: UserIdSpec.hs  UserLoginSpec.hs  UserSpec.hs
core/: core.cabal
core/src/Reacthome/Core/: Adjustable.hs  Possibilities.hs  Switchable.hs
daemon/: reacthome-daemon.cabal
daemon/app/: Main.hs
daemon/src/Reacthome/Daemon/: App.hs
haskell/glue/: README.md  glue.cabal
haskell/glue/app/: Main.hs
haskell/glue/src/Glue/: AST.hs  Env.hs  Eval.hs  IR.hs  Lib.hs  Module.hs  Parser.hs
haskell/glue/src/Glue/Eval/: Error.hs  Exception.hs
haskell/glue/src/Glue/Lib/: Bool.hs  Builtin.hs  IO.hs  List.hs  Math.hs
haskell/glue/src/Glue/Module/: Cache.hs  Error.hs  Import.hs  Loader.hs  Registration.hs  Registry.hs  System.hs
haskell/glue/test/Glue/: CompileSpec.hs  EnvSpec.hs  EvalSpec.hs  IRSpec.hs  NativeIntegrationSpec.hs  NativeSpec.hs  ParserSpec.hs  TestUtils.hs
jose/: jose.cabal
jose/src/JOSE/: Alg.hs  Crypto.hs  Header.hs  JWK.hs  JWKS.hs  JWT.hs  KeyPair.hs  Payload.hs  PublicKey.hs  Sign.hs  Typ.hs  Verify.hs
jwt/: jose.cabal  jwt.cabal
jwt/src/: JWT.hs
jwt/src/JOSE/: Crypto.hs  Header.hs  JWT.hs  Payload.hs  Typ.hs  Util.hs
jwt/src/JWT/: Alg.hs  Header.hs  Payload.hs  Typ.hs
lang/: reacthome-lang.cabal
lang/app/: Main.hs
lang/src/: Lang.hs
reactor/: AST.md  BINDING_SEMANTICS.md  COMPILATION.md  ENVIRONMENT.md  EVALSTATE.md  EVALUATION.md  EVALUATION_CLOSURES.md  EVALUATION_DATA.md  EVALUATION_DOTTED_SYMBOLS.md  EVALUATION_FUNCTIONS.md  EVALUATION_LISTS.md  EVALUATION_LITERALS.md  EVALUATION_MODULES.md  EVALUATION_NATIVES.md  EVALUATION_OBJECTS.md  EVALUATION_PREPARATION_ENVIRONMENT.md  EVALUATION_PREPARATION_MODULE_REGISTRATION.md  EVALUATION_PRIMITIVES.md  EVALUATION_SET.md  EVALUATION_SPEC.md  EVALUATION_SPECIAL_FORMS.md  EVALUATION_SYMBOLS.md  IR.md  MODULE_ENVIRONMENTS.md  MODULE_SYSTEM.md  MODULE_SYSTEM_TODO.md  README.md  STDLIB_BOOL.md  STDLIB_INTRO.md  SYNTAX.md  manifest.md  reactor.cabal  todo.md
reactor/app/: Main.hs
reactor/context/: development-rules.md  markdown-style-guide.md  spec-creation-plan.md
reactor/drafts/: AST.md  EVALUATION_NATIVES.md  EVALUATION_PREPARATION_EVALSTATE.md  EVALUATION_QUOTE.md  EVALUATION_SYMBOLS.md  MODULE_ENVIRONMENTS.md  MODULE_SYSTEM_TODO.md  STDLIB_BUILTIN.md  SYNTAX.md
reactor/examples/: list-utils.reactor  math-utils.reactor
reactor/spec/: README.md  ast.md  compilation-ast-ir.md  environment.md  execution-pipeline.md  ir.md  language-aims.md  language-overview.md  module-system.md  parsing-to-ast.md  syntax.md
reactor/src/Reactor/: AST.hs  Env.hs  Error.hs  Eval.hs  IR.hs  Lib.hs  Module.hs  Native.hs  Parser.hs  Value.hs
reactor/src/Reactor/Eval/: Error.hs
reactor/src/Reactor/Lib/: Arithmetic.hs  Bool.hs  Builtin.hs  List.hs  Math.hs
reactor/src/Reactor/Module/: Cache.hs  Error.hs  Import.hs  Loader.hs  Registration.hs  Registry.hs  System.hs
reactor/src/Reactor/Parser/: Error.hs
reactor/src/Spec/: Device.hs
reactor/test/Reactor/: CompileSpec.hs  EnvSpec.hs  ErrorContextSpec.hs  EvalSpec.hs  ModuleSpec.hs  ParserSpec.hs  TestUtils.hs  ValueSpec.hs
reactor/test/Reactor/Lib/: ListSpec.hs
reactor/test/Reactor/Module/: CacheSpec.hs  ImportSpec.hs  ModuleSpec.hs  RegistrationSpec.hs  RegistrySpec.hs
relay/: reacthome-relay.cabal
relay/app/: Main.hs
relay/src/Reacthome/: Relay.hs  Relays.hs
relay/src/Reacthome/Relay/: App.hs  Client.hs  Connection.hs  Dispatcher.hs  Error.hs  Message.hs  Options.hs  Relay.hs  Repository.hs  Server.hs  Stat.hs
rest/: rest.cabal
rest/src/: Rest.hs
rest/src/Rest/: ContentType.hs  Media.hs  Method.hs  Status.hs
server/: reacthome-server.cabal
server/app/: Main.hs
server/src/Reacthome/RBUS/: Serial.hs  UDP.hs
server/src/Reacthome/Server/: App.hs
util/: util.cabal
util/src/Util/: ASN1.hs  Base64.hs  Channel.hs  MVar.hs  SQLite.hs  Timer.hs
util/src/Util/Base64/: Lazy.hs  URL.hs
web/: web.cabal
web/src/Web/: Rest.hs
web/src/Web/Rest/: ContentType.hs  Status.hs
web/src/Web/WebSockets/: Client.hs  Connection.hs  Error.hs  Options.hs  PendingConnection.hs  Server.hs
web/src/Web/WebSockets_/: Client.hs  Connection.hs  Error.hs  Server.hs  Socket.hs
web/src/Web/Websockets/: Client.hs  Connection.hs  Error.hs  Server.hs
ws/: ws.cabal
ws/src/WebSockets/: Client.hs  Connection.hs  Error.hs  Options.hs  PendingConnection.hs  Server.hs
(+1091 files in other folders)
