cabal-version: 3.8
name: reacthome-auth
version: 0.1.0.0
synopsis: OAuth2 Authorization Server
description: A type-safe OAuth2 Authorization Server implementation
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-extensions
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes

common common-ghc-options
  ghc-options:
    -O3
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wno-orphans

common common-depends
  build-depends:
    base >=4.19 && <5.0,
    bytestring,
    containers,
    text,
    time,
    transformers,
    uuid,

library
  import: common-extensions
  import: common-ghc-options
  import: common-depends
  hs-source-dirs: src
  exposed-modules:
    Reacthome.Auth.App
    Reacthome.Auth.Controller.Authenticate.AuthenticateOptions
    Reacthome.Auth.Controller.Authenticate.AuthenticatedUser
    Reacthome.Auth.Controller.Authenticate.Begin
    Reacthome.Auth.Controller.Authenticate.Complete
    Reacthome.Auth.Controller.Register.Begin
    Reacthome.Auth.Controller.Register.Complete
    Reacthome.Auth.Controller.Register.RegisterOptions
    Reacthome.Auth.Controller.Register.RegisteredUser
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAssertionResponse
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAttestationResponse
    Reacthome.Auth.Controller.WebAuthn.COSEAlgorithmIdentifier
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredential
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialCreationOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRequestOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRpEntity
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialUserEntity
    Reacthome.Auth.Domain.Authenticate.Begin
    Reacthome.Auth.Domain.Authenticate.Complete
    Reacthome.Auth.Domain.Credential.PublicKey
    Reacthome.Auth.Domain.Credential.PublicKey.Algorithm
    Reacthome.Auth.Domain.Credential.PublicKey.Id
    Reacthome.Auth.Domain.Credential.PublicKeys
    Reacthome.Auth.Domain.Register.Begin
    Reacthome.Auth.Domain.Register.Complete
    Reacthome.Auth.Domain.User
    Reacthome.Auth.Domain.User.Id
    Reacthome.Auth.Domain.User.Login
    Reacthome.Auth.Domain.User.Name
    Reacthome.Auth.Domain.User.Status
    Reacthome.Auth.Domain.Users
    Reacthome.Auth.Environment
    Reacthome.Auth.Repository.InMemory.Challenges
    Reacthome.Auth.Repository.InMemory.Credential.PublicKeys
    Reacthome.Auth.Repository.InMemory.Users
    Reacthome.Auth.Service.Authenticate.Begin
    Reacthome.Auth.Service.Authenticate.Complete
    Reacthome.Auth.Service.Authenticate.PreAuthenticated
    Reacthome.Auth.Service.Challenge
    Reacthome.Auth.Service.Challenges
    Reacthome.Auth.Service.Register.Begin
    Reacthome.Auth.Service.Register.Complete
    Reacthome.Auth.Service.Register.PreRegistered
    Util.Aeson
    Util.Base64
    Util.Base64.Lazy
    Util.Base64.URL
    Util.Base64.URL.Lazy
    Util.Error
    Util.MVar
    Util.Wai

  build-depends:
    aeson,
    base64-bytestring,
    crypton,
    hashable,
    http-types,
    unordered-containers,
    wai,
    wai-app-static,

executable reacthome-auth-service
  import: common-extensions
  import: common-ghc-options
  import: common-depends
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    reacthome-auth,
    warp,

test-suite reacthome-auth-test
  import: common-extensions
  import: common-ghc-options
  import: common-depends
  ghc-options: -Wno-orphans
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Reacthome.Auth.Domain.UserIdSpec
    Reacthome.Auth.Domain.UserLoginSpec
    Reacthome.Auth.Domain.UserSpec

  build-depends:
    QuickCheck,
    hspec,
    quickcheck-instances,
    reacthome-auth,
