cabal-version: 3.8
name: reacthome-auth
version: 0.1.0.0
synopsis: OAuth2 Authorization Server
description: A type-safe OAuth2 Authorization Server implementation
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-extensions
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes

common common-ghc-options
  ghc-options:
    -O3
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wno-orphans

common common-depends
  build-depends:
    base >=4.19 && <5.0,
    bytestring,
    containers,
    text,
    time,
    transformers,
    uuid,

library
  import: common-extensions
  import: common-ghc-options
  import: common-depends
  hs-source-dirs: src
  exposed-modules:
    Reacthome.Auth.App
    Reacthome.Auth.Controller.Authentication.Authenticated
    Reacthome.Auth.Controller.Authentication.Begin
    Reacthome.Auth.Controller.Authentication.Complete
    Reacthome.Auth.Controller.Authentication.Options
    Reacthome.Auth.Controller.Registration.Begin
    Reacthome.Auth.Controller.Registration.Complete
    Reacthome.Auth.Controller.Registration.Options
    Reacthome.Auth.Controller.Registration.Registered
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAssertionResponse
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAttestationResponse
    Reacthome.Auth.Controller.WebAuthn.COSEAlgorithmIdentifier
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredential
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialCreationOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRequestOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRpEntity
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialUserEntity
    Reacthome.Auth.Domain.Authentication.Begin
    Reacthome.Auth.Domain.Authentication.Complete
    Reacthome.Auth.Domain.Credential.PublicKey
    Reacthome.Auth.Domain.Credential.PublicKey.Algorithm
    Reacthome.Auth.Domain.Credential.PublicKey.Id
    Reacthome.Auth.Domain.Credential.PublicKeys
    Reacthome.Auth.Domain.Registration.Begin
    Reacthome.Auth.Domain.Registration.Complete
    Reacthome.Auth.Domain.User
    Reacthome.Auth.Domain.User.Id
    Reacthome.Auth.Domain.User.Login
    Reacthome.Auth.Domain.User.Name
    Reacthome.Auth.Domain.User.Status
    Reacthome.Auth.Domain.Users
    Reacthome.Auth.Environment
    Reacthome.Auth.Repository.InMemory.Challenges
    Reacthome.Auth.Repository.InMemory.Credential.PublicKeys
    Reacthome.Auth.Repository.InMemory.Users
    Reacthome.Auth.Service.Authentication.Begin
    Reacthome.Auth.Service.Authentication.Complete
    Reacthome.Auth.Service.Authentication.Pre
    Reacthome.Auth.Service.Challenge
    Reacthome.Auth.Service.Challenges
    Reacthome.Auth.Service.Registration.Begin
    Reacthome.Auth.Service.Registration.Complete
    Reacthome.Auth.Service.Registration.Pre
    Reacthome.Yandex.Dialogs.Application
    Reacthome.Yandex.Dialogs.DialogRequest
    Reacthome.Yandex.Dialogs.DialogResponse
    Reacthome.Yandex.Dialogs.Entity
    Reacthome.Yandex.Dialogs.Intents
    Reacthome.Yandex.Dialogs.Markup
    Reacthome.Yandex.Dialogs.Meta
    Reacthome.Yandex.Dialogs.NLU
    Reacthome.Yandex.Dialogs.Request
    Reacthome.Yandex.Dialogs.Response
    Reacthome.Yandex.Dialogs.Session
    Reacthome.Yandex.Dialogs.Token
    Reacthome.Yandex.Dialogs.User
    Util.ASN1
    Util.Aeson
    Util.Base64
    Util.Base64.Lazy
    Util.Base64.URL
    Util.Base64.URL.Lazy
    Util.Error
    Util.MVar
    Util.Wai

  build-depends:
    aeson,
    asn1-encoding,
    base64-bytestring,
    crypton,
    hashable,
    http-types,
    unordered-containers,
    wai,
    wai-app-static,

executable reacthome-auth-service
  import: common-extensions
  import: common-ghc-options
  import: common-depends
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    reacthome-auth,
    warp,

test-suite reacthome-auth-test
  import: common-extensions
  import: common-ghc-options
  import: common-depends
  ghc-options: -Wno-orphans
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Reacthome.Auth.Domain.UserIdSpec
    Reacthome.Auth.Domain.UserLoginSpec
    Reacthome.Auth.Domain.UserSpec

  build-depends:
    QuickCheck,
    hspec,
    quickcheck-instances,
    reacthome-auth,
