cabal-version: 3.8
name: reacthome-assist
version: 0.1.0.0
synopsis: Reacthome AI Assistant Server
description: A collection of the voice assistants for Reacthome
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-options
  build-depends:
    base,
    bytestring,
    text,
    transformers,

  default-language: GHC2021
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

library
  import:
    common-options

  -- cabal-gild: discover src
  exposed-modules:
    Reacthome.Assist.App
    Reacthome.Assist.Controller.Dialog.Answer
    Reacthome.Assist.Controller.Dialog.Query
    Reacthome.Assist.Controller.Yandex
    Reacthome.Assist.Dialog.Gate
    Reacthome.Assist.Domain.Answer
    Reacthome.Assist.Domain.Query
    Reacthome.Assist.Environment
    Reacthome.Assist.Repository.Answers
    Reacthome.Assist.Service.Dialog
    Reacthome.Gate.Connection
    Reacthome.Gate.Connection.Pool
    Reacthome.Yandex.Dialogs.Application
    Reacthome.Yandex.Dialogs.DialogRequest
    Reacthome.Yandex.Dialogs.DialogResponse
    Reacthome.Yandex.Dialogs.Directives
    Reacthome.Yandex.Dialogs.Entity
    Reacthome.Yandex.Dialogs.Intents
    Reacthome.Yandex.Dialogs.Markup
    Reacthome.Yandex.Dialogs.Meta
    Reacthome.Yandex.Dialogs.Request
    Reacthome.Yandex.Dialogs.Response
    Reacthome.Yandex.Dialogs.Session
    Reacthome.Yandex.Dialogs.User

  build-depends:
    aeson,
    async,
    hashable,
    http-types,
    network,
    stm,
    stm-containers,
    unordered-containers,
    util,
    uuid,
    wai,
    web,
    websockets,
    wuss,

  hs-source-dirs: src

executable reacthome-assist
  import:
    common-options

  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    reacthome-assist,
    warp,

  hs-source-dirs: app
  main-is: Main.hs
