cabal-version: 3.8
name: reacthome-assist
version: 0.1.0.0
synopsis: Reacthome AI Assistant Server
description: A collection of the voice assistants for Reacthome
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-options
  build-depends:
    base,
    bytestring,
    text,
    transformers,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    OverloadedRecordDot
    OverloadedStrings

library
  import:
    common-options

  -- cabal-gild: discover src
  exposed-modules:
    Reacthome.Assist.App
    Reacthome.Assist.Controller.Dialog.Answer
    Reacthome.Assist.Controller.Dialog.Query
    Reacthome.Assist.Controller.Yandex
    Reacthome.Assist.Dialog.Gate
    Reacthome.Assist.Domain.Answer
    Reacthome.Assist.Domain.Query
    Reacthome.Assist.Domain.Server.Id
    Reacthome.Assist.Domain.User
    Reacthome.Assist.Domain.User.Id
    Reacthome.Assist.Domain.Users
    Reacthome.Assist.Environment
    Reacthome.Assist.Repository.Answers
    Reacthome.Assist.Repository.PublicKeys
    Reacthome.Assist.Repository.Users
    Reacthome.Assist.Service.Dialog
    Reacthome.Assist.Service.JOSE.PublicKey
    Reacthome.Gate.Connection
    Reacthome.Gate.Connection.Pool
    Reacthome.Yandex.Dialogs.DialogRequest
    Reacthome.Yandex.Dialogs.DialogRequest.Meta
    Reacthome.Yandex.Dialogs.DialogRequest.Request
    Reacthome.Yandex.Dialogs.DialogRequest.Request.Markup
    Reacthome.Yandex.Dialogs.DialogRequest.Session
    Reacthome.Yandex.Dialogs.DialogRequest.Session.Application
    Reacthome.Yandex.Dialogs.DialogRequest.Session.User
    Reacthome.Yandex.Dialogs.DialogResponse
    Reacthome.Yandex.Dialogs.DialogResponse.Response
    Reacthome.Yandex.Dialogs.DialogResponse.Response.Directives

  build-depends:
    aeson,
    async,
    hashable,
    http-client,
    http-client-tls,
    http-types,
    jose,
    network,
    stm,
    stm-containers,
    unordered-containers,
    util,
    uuid,
    wai,
    web,
    websockets,
    wuss,

  hs-source-dirs: src

executable reacthome-assist
  import:
    common-options

  ghc-options:
    -O2
    -rtsopts
    -threaded
    -with-rtsopts=-N
    -Wall

  build-depends:
    reacthome-assist,
    warp,

  hs-source-dirs: app
  main-is: Main.hs
