cabal-version: 3.8
name: reacthome-auth
version: 0.1.0.0
synopsis: Reacthome OAuth2 Auth Server
description: A type-safe OAuth2 Auth Server implementation
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-options
  build-depends:
    base,
    bytestring,
    text,
    transformers,
    uuid,

  default-language: GHC2021
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms

library
  import:
    common-options

  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Reacthome.Auth.App
    Reacthome.Auth.Controller.AuthFlowCookie
    Reacthome.Auth.Controller.Authentication
    Reacthome.Auth.Controller.Authentication.Authenticated
    Reacthome.Auth.Controller.Authentication.Begin
    Reacthome.Auth.Controller.Authentication.Complete
    Reacthome.Auth.Controller.Authentication.Options
    Reacthome.Auth.Controller.OAuth
    Reacthome.Auth.Controller.OAuth.ExchangeCodeForToken
    Reacthome.Auth.Controller.OAuth.RefreshToken
    Reacthome.Auth.Controller.OAuth.Token
    Reacthome.Auth.Controller.Registration
    Reacthome.Auth.Controller.Registration.Begin
    Reacthome.Auth.Controller.Registration.Complete
    Reacthome.Auth.Controller.Registration.Options
    Reacthome.Auth.Controller.Registration.Registered
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAssertionResponse
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAttestationResponse
    Reacthome.Auth.Controller.WebAuthn.COSEAlgorithmIdentifier
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredential
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialCreationOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRequestOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRpEntity
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialUserEntity
    Reacthome.Auth.Controller.WellKnown.JWKS
    Reacthome.Auth.Domain.Authentication.Begin
    Reacthome.Auth.Domain.Authentication.Complete
    Reacthome.Auth.Domain.Credential.PublicKey
    Reacthome.Auth.Domain.Credential.PublicKey.Algorithm
    Reacthome.Auth.Domain.Credential.PublicKey.Id
    Reacthome.Auth.Domain.Credential.PublicKeys
    Reacthome.Auth.Domain.Registration.Begin
    Reacthome.Auth.Domain.Registration.Complete
    Reacthome.Auth.Domain.User
    Reacthome.Auth.Domain.User.Id
    Reacthome.Auth.Domain.User.Login
    Reacthome.Auth.Domain.User.Name
    Reacthome.Auth.Domain.User.Status
    Reacthome.Auth.Domain.Users
    Reacthome.Auth.Environment
    Reacthome.Auth.Repository.InMemory.AuthFlows
    Reacthome.Auth.Repository.InMemory.AuthUsers
    Reacthome.Auth.Repository.InMemory.Challenges
    Reacthome.Auth.Repository.InMemory.Credential.PublicKeys
    Reacthome.Auth.Repository.InMemory.Users
    Reacthome.Auth.Service.AuthFlow
    Reacthome.Auth.Service.AuthFlows
    Reacthome.Auth.Service.AuthUsers
    Reacthome.Auth.Service.Authentication.Begin
    Reacthome.Auth.Service.Authentication.Complete
    Reacthome.Auth.Service.Authentication.Pre
    Reacthome.Auth.Service.Challenge
    Reacthome.Auth.Service.Challenges
    Reacthome.Auth.Service.Registration.Begin
    Reacthome.Auth.Service.Registration.Complete
    Reacthome.Auth.Service.Registration.Pre
    Reacthome.Auth.View.Screen.Authentication
    Reacthome.Auth.View.Screen.Registration

  build-depends:
    aeson,
    base64-bytestring,
    cookie,
    crypton,
    hashable,
    http-types,
    jose,
    lucid2,
    time,
    unordered-containers,
    util,
    wai,
    web,

executable reacthome-auth
  import:
    common-options

  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    jose,
    reacthome-auth,
    wai-middleware-static,
    warp,

  hs-source-dirs: app
  main-is: Main.hs

-- test-suite reacthome-auth-test
--   import: common-options
--   ghc-options: -Wno-orphans
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs: test
--   other-modules:
--     Reacthome.Auth.Domain.UserIdSpec
--     Reacthome.Auth.Domain.UserLoginSpec
--     Reacthome.Auth.Domain.UserSpec
--   build-depends:
--     QuickCheck,
--     hspec,
--     quickcheck-instances,
--     reacthome-auth,
