cabal-version: 3.8
name: reacthome-auth
version: 0.1.0.0
synopsis: Reacthome OAuth2 Auth Server
description: A type-safe OAuth2 Auth Server implementation
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-options
  build-depends:
    base,
    bytestring,
    sqlite-simple,
    text,
    transformers,
    util,
    uuid,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes

library
  import:
    common-options

  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Reacthome.Auth.App
    Reacthome.Auth.Controller.AuthFlowCookie
    Reacthome.Auth.Controller.Authentication
    Reacthome.Auth.Controller.Authentication.Authenticated
    Reacthome.Auth.Controller.Authentication.Begin
    Reacthome.Auth.Controller.Authentication.Complete
    Reacthome.Auth.Controller.Authentication.Options
    Reacthome.Auth.Controller.OAuth
    Reacthome.Auth.Controller.OAuth.ExchangeCodeForToken
    Reacthome.Auth.Controller.OAuth.Grant
    Reacthome.Auth.Controller.OAuth.RefreshToken
    Reacthome.Auth.Controller.OAuth.Token
    Reacthome.Auth.Controller.Registration
    Reacthome.Auth.Controller.Registration.Begin
    Reacthome.Auth.Controller.Registration.Complete
    Reacthome.Auth.Controller.Registration.Options
    Reacthome.Auth.Controller.Registration.Registered
    Reacthome.Auth.Controller.Users
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAssertionResponse
    Reacthome.Auth.Controller.WebAuthn.AuthenticatorAttestationResponse
    Reacthome.Auth.Controller.WebAuthn.COSEAlgorithmIdentifier
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredential
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialCreationOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRequestOptions
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialRpEntity
    Reacthome.Auth.Controller.WebAuthn.PublicKeyCredentialUserEntity
    Reacthome.Auth.Controller.WellKnown.AppleAppSiteAssociation
    Reacthome.Auth.Controller.WellKnown.JWKS
    Reacthome.Auth.Domain.Authentication.Begin
    Reacthome.Auth.Domain.Authentication.Complete
    Reacthome.Auth.Domain.Challenge
    Reacthome.Auth.Domain.Challenges
    Reacthome.Auth.Domain.Client
    Reacthome.Auth.Domain.Client.Id
    Reacthome.Auth.Domain.Client.Name
    Reacthome.Auth.Domain.Clients
    Reacthome.Auth.Domain.Credential.PublicKey
    Reacthome.Auth.Domain.Credential.PublicKey.Algorithm
    Reacthome.Auth.Domain.Credential.PublicKey.Algorithm.ED25519
    Reacthome.Auth.Domain.Credential.PublicKey.Algorithm.ES256
    Reacthome.Auth.Domain.Credential.PublicKey.Algorithm.RS256
    Reacthome.Auth.Domain.Credential.PublicKey.Id
    Reacthome.Auth.Domain.Credential.PublicKeys
    Reacthome.Auth.Domain.Hash
    Reacthome.Auth.Domain.PublicKey
    Reacthome.Auth.Domain.PublicKeys
    Reacthome.Auth.Domain.RefreshToken
    Reacthome.Auth.Domain.RefreshTokens
    Reacthome.Auth.Domain.Registration.Begin
    Reacthome.Auth.Domain.Registration.Complete
    Reacthome.Auth.Domain.User
    Reacthome.Auth.Domain.User.Id
    Reacthome.Auth.Domain.User.Login
    Reacthome.Auth.Domain.User.Name
    Reacthome.Auth.Domain.Users
    Reacthome.Auth.Environment
    Reacthome.Auth.Repository.AuthFlows
    Reacthome.Auth.Repository.AuthUsers
    Reacthome.Auth.Repository.Challenges
    Reacthome.Auth.Repository.Clients
    Reacthome.Auth.Repository.Credentials.PublicKeys.InMemory
    Reacthome.Auth.Repository.Credentials.PublicKeys.SQLite
    Reacthome.Auth.Repository.Credentials.PublicKeys.SQLite.Query
    Reacthome.Auth.Repository.PublicKeys.InMemory
    Reacthome.Auth.Repository.PublicKeys.SQLite
    Reacthome.Auth.Repository.PublicKeys.SQLite.Query
    Reacthome.Auth.Repository.RefreshTokens.InMemory
    Reacthome.Auth.Repository.RefreshTokens.SQLite
    Reacthome.Auth.Repository.RefreshTokens.SQLite.Query
    Reacthome.Auth.Repository.Users.InMemory
    Reacthome.Auth.Repository.Users.SQLite
    Reacthome.Auth.Repository.Users.SQLite.Query
    Reacthome.Auth.Service.AuthFlow
    Reacthome.Auth.Service.AuthFlows
    Reacthome.Auth.Service.AuthUsers
    Reacthome.Auth.Service.Authentication.Begin
    Reacthome.Auth.Service.Authentication.Complete
    Reacthome.Auth.Service.Authentication.Pre
    Reacthome.Auth.Service.OAuth.Grant
    Reacthome.Auth.Service.Registration.Begin
    Reacthome.Auth.Service.Registration.Complete
    Reacthome.Auth.Service.Registration.Pre
    Reacthome.Auth.Service.Secret
    Reacthome.Auth.View.Screen.Authentication
    Reacthome.Auth.View.Screen.Registration
    Reacthome.Auth.View.Screen.Users

  build-depends:
    aeson,
    asn1-encoding,
    asn1-types,
    base64-bytestring,
    cookie,
    crypton,
    hashable,
    http-types,
    jose,
    lucid2,
    memory,
    resource-pool,
    rest,
    time,
    unordered-containers,
    wai,

executable reacthome-auth
  import:
    common-options

  build-depends:
    jose,
    reacthome-auth,
    wai-middleware-static,
    warp,

  hs-source-dirs: app
  main-is: Main.hs

-- test-suite reacthome-auth-test
--   import: common-options
--   ghc-options: -Wno-orphans
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs: test
--   other-modules:
--     Reacthome.Auth.Domain.UserIdSpec
--     Reacthome.Auth.Domain.UserLoginSpec
--     Reacthome.Auth.Domain.UserSpec
--   build-depends:
--     QuickCheck,
--     hspec,
--     quickcheck-instances,
--     reacthome-auth,
