cabal-version: 3.8
name: reacthome-daemon
version: 0.1.0.0
synopsis: Reacthome Daemon
description: Reacthome UX server
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-options
  build-depends:
    base,
    text,
    util,
    web,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

library
  import:
    common-options

  -- cabal-gild: discover src
  exposed-modules:
    Reacthome.Daemon.App

  build-depends:
    async,
    bytestring,
    reacthome-relay,
    text,
    unagi-chan,
    uuid,

  hs-source-dirs: src

executable reacthome-daemon
  import:
    common-options

  build-depends:
    async,
    bytestring,
    clock,
    format-numbers,
    reacthome-daemon,
    reacthome-relay,
    text,
    unagi-chan,
    uuid,

  hs-source-dirs: app
  main-is: Main.hs
