cabal-version: 3.8
name: jose
version: 0.1.0.0
synopsis: JOSE Utilities
description: A collection of JOSE utilities for Reacthome daemons galaxy
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    JOSE.Alg
    JOSE.Crypto
    JOSE.Header
    JOSE.JWK
    JOSE.JWKS
    JOSE.JWT
    JOSE.Payload
    JOSE.Typ
    JOSE.Util

  build-depends:
    aeson,
    base,
    base64-bytestring,
    bytestring,
    crypton,
    hashable,
    memory,
    text,
    time,
    transformers,
    uuid,

  default-language: GHC2021
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
