cabal-version: 3.8
name: util
version: 0.1.0.0
synopsis: JWT Utilities
description: A collection of JWT utilities for Reacthome daemons galaxy
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
  build-depends:
    aeson,
    base,
    base64-bytestring,
    bytestring,
    crypton,
    text,
    transformers,

  default-language: GHC2021
