cabal-version: 3.8
name: jwt
version: 0.1.0.0
synopsis: JWT Utilities
description: A collection of JWT utilities for Reacthome daemons galaxy
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    JWT
    JWT.Alg
    JWT.Header
    JWT.Payload
    JWT.Typ

  build-depends:
    aeson,
    base,
    base64-bytestring,
    bytestring,
    crypton,
    text,
    time,
    transformers,
    uuid,

  default-language: GHC2021
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    OverloadedRecordDot
    OverloadedStrings
